# newcomer-practice

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml
pack_test/: hello.py  test1.py
